--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^3.6.0",
-    "css-loader": "^0.28.7"
+    "css-loader": "^0.28.7",
+    "webpack": "^3.8.1"
   },
   "dependencies": {
     "bulma": "^0.6.0",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1"
   }
 }
